tests/fixtures/positive/potential-bugs/CharArrayToStringCall.kt
package fixtures.positive.potentialbugs

class CharArrayToStringCall {
    fun convert(charArray: CharArray): String {
        return charArray.toString()
    }
}
